Remove <video> tag from index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
         overflow: hidden;
       }
 
-      #offline-resources,
-      #video {
+      #offline-resources {
         display: none;
       }
 
@@ -45,7 +44,6 @@
     <div id="game-container">
       <div id="game"></div>
     </div>
-    <video id="video"></video>
     <button id="calibration">calibration</button>
 
     <div id="offline-resources">
